# ChatService

./: CMakeLists.txt  README.md
ChatClient/: CMakeLists.txt
ChatClient/Source/: AbstractChatConnection.h  ChatConnectionFactory.h  ChatGUI.cpp  ChatGUI.h  ChatGUI.ui  TCPChatClient.cpp  TCPChatConnection.cpp  TCPChatConnection.h  main.cpp
ChatServer/: CMakeLists.txt
ChatServer/Source/: AbstractClient.h  AbstractServerListener.h  ChatClientConnectionFactory.cpp  ChatClientConnectionFactory.h  ChatClientManager.cpp  ChatClientManager.h  DummyClient.h  ServerListenerFactory.cpp  ServerListenerFactory.h  TCPClient.cpp  TCPClient.h  TCPServerListener.cpp  TCPServerListener.h  main.cpp
ChatServiceUnitTests/: CMakeLists.txt
ChatServiceUnitTests/Source/: test.cpp
ChatServiceUnitTests/Source/Mocks/: MockClient.h  MockQDataStream.h  MockQTcpSocket.h
ChatServiceUnitTests/Source/TestCases/: ChatClientManagerTest.cpp  ChatClientManagerTest.h  ChatClientTest.h  MessageReceiver.cpp  MessageReceiver.h  TCPChatConnectionTest.cpp  TCPChatConnectionTest.h
